# notabot

./: Cargo.toml  README.md  create_structure.zsh  taff.md
config/: default.json  schema.json
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs  models.rs
src/executor/: actions.rs  mod.rs  runtime.rs
src/sources/: directory.rs  file.rs  mod.rs  stdin_source.rs  tcp.rs
src/utils/: interpolation.rs  mod.rs  window.rs
tests/events/: sample_event.json
