[package]
name = "notabot"
version = "0.1.0"
edition = "2024"
authors = ["Zied Yousfi"]
description = "A modular Enigo wrapper for UI automation"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
enigo = "0.6.1"
rand = "0.9.2"
thiserror = "2.0.16"
notify = "8.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.47", features = ["derive"] }
schemars = "1.0.4"
serde_valid = "1.0.5"
